// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Refund Happy Path should return 201 and correct update actions when a partial refund is added against a pay later order 1`] = `
Object {
  "action": "changeTransactionState",
  "state": "Pending",
  "transactionId": "e5f86ecd-0605-4e4f-be21-745cc33c338b",
}
`;

exports[`Create Refund Happy Path should return 201 and correct update actions when a partial refund is added against a pay later order 2`] = `
Object {
  "action": "changeTransactionInteractionId",
  "interactionId": "re_sANm7WTxRm",
  "transactionId": "e5f86ecd-0605-4e4f-be21-745cc33c338b",
}
`;

exports[`Create Refund Happy Path should return 201 and correct update actions when a partial refund is added against a pay later order 3`] = `
Object {
  "action": "changeTransactionTimestamp",
  "timestamp": "2022-01-17T11:12:45+00:00",
  "transactionId": "e5f86ecd-0605-4e4f-be21-745cc33c338b",
}
`;

exports[`Create Refund Happy Path should return 201 and correct update actions when a partial refund is added against a pay later order 4`] = `
Object {
  "action": "addInterfaceInteraction",
  "fields": Object {
    "actionType": "createCustomRefund",
    "createdAt": "2022-01-17T11:12:45+00:00",
    "id": "b2bd1698-9923-4704-9729-02db2de495d1",
    "request": "{\\"refundTransaction\\":\\"e5f86ecd-0605-4e4f-be21-745cc33c338b\\",\\"refundRequested\\":{\\"currencyCode\\":\\"EUR\\",\\"centAmount\\":5500}}",
    "response": "{\\"originalTransaction\\":\\"2b5f68ad-ae94-4bf1-ae41-7096e5142f89\\",\\"molliePaymentId\\":\\"tr_vsfkQmj4Fd\\",\\"refundTransaction\\":\\"e5f86ecd-0605-4e4f-be21-745cc33c338b\\"}",
  },
  "type": Object {
    "key": "ct-mollie-integration-interface-interaction-type",
  },
}
`;

exports[`Create Refund Happy Path should return 201 and correct update actions when a partial refund is added against a pay now order 1`] = `
Object {
  "action": "changeTransactionState",
  "state": "Pending",
  "transactionId": "e5f86ecd-0605-4e4f-be21-745cc33c338b",
}
`;

exports[`Create Refund Happy Path should return 201 and correct update actions when a partial refund is added against a pay now order 2`] = `
Object {
  "action": "changeTransactionInteractionId",
  "interactionId": "re_sANm7WTxRm",
  "transactionId": "e5f86ecd-0605-4e4f-be21-745cc33c338b",
}
`;

exports[`Create Refund Happy Path should return 201 and correct update actions when a partial refund is added against a pay now order 3`] = `
Object {
  "action": "changeTransactionTimestamp",
  "timestamp": "2022-01-17T11:12:45+00:00",
  "transactionId": "e5f86ecd-0605-4e4f-be21-745cc33c338b",
}
`;

exports[`Create Refund Happy Path should return 201 and correct update actions when a partial refund is added against a pay now order 4`] = `
Object {
  "action": "addInterfaceInteraction",
  "fields": Object {
    "actionType": "createCustomRefund",
    "createdAt": "2022-01-17T11:12:45+00:00",
    "id": "b2bd1698-9923-4704-9729-02db2de495d1",
    "request": "{\\"refundTransaction\\":\\"e5f86ecd-0605-4e4f-be21-745cc33c338b\\",\\"refundRequested\\":{\\"currencyCode\\":\\"EUR\\",\\"centAmount\\":5500}}",
    "response": "{\\"originalTransaction\\":\\"55936871-55ed-484d-ab4c-7c1ce944a07d\\",\\"molliePaymentId\\":\\"tr_kT7USTNHzR\\",\\"refundTransaction\\":\\"e5f86ecd-0605-4e4f-be21-745cc33c338b\\"}",
  },
  "type": Object {
    "key": "ct-mollie-integration-interface-interaction-type",
  },
}
`;
